<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.serviceprice.ServicePriceFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/services"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porte_automovel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroupPorte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutService" />

    <RadioGroup
        android:id="@+id/radioGroupPorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutService">

        <RadioButton
            android:id="@+id/radioMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medio"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioGrande"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grande"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioMoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moto"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/symbol"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/radioGroupPorte"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutService" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/symbol"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/radioGroupPorte"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/symbol"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/radioGroupPorte"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editValorMedio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="viewStart"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutService" />

    <EditText
        android:id="@+id/editValorGrande"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="viewStart"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editValorMedio" />

    <EditText
        android:id="@+id/editValorMoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="viewStart"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editValorGrande" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:alpha=".9"
        android:background="@drawable/custom_button"
        android:elevation="6dp"
        android:text="@string/button_add"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPorte" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/title_list"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>